--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -2,11 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.CustomerDashboardActivity">
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -16,7 +14,7 @@
         app:itemBackground="@color/white"
         app:itemIconTint="@drawable/bottom_navigation_color_selector"
         app:itemTextColor="@drawable/bottom_navigation_color_selector"
-        app:menu="@menu/menu_customer_navigation" />
+        app:menu="@menu/menu_customer" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
@@ -25,6 +23,5 @@
         android:layout_above="@+id/bottom_navigation"
         android:layout_alignParentTop="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
 
 </RelativeLayout>
