--- a/app/src/main/res/layout/complain_layout.xml
+++ b/app/src/main/res/layout/complain_layout.xml
@@ -1,41 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="51dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="center"
+        android:background="@color/colorPrimaryDark"
+        android:text="Register Your Complaint"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
+        android:textColor="@color/white"
         android:textSize="25dp"
-        android:textColor="@color/colorPrimary"
-        android:text="Complain" />
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/titName"
+        android:id="@+id/txtcomplaints"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="149dp"
+        android:layout_below="@id/textView"
+        android:layout_marginStart="@dimen/margin_layout"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="@dimen/margin_layout"
         android:backgroundTint="@color/colorPrimaryText"
+        android:gravity="top"
         android:hint="Please Enter Your Complain"
-        android:inputType="textLongMessage"
-        android:layout_marginTop="20dp"
+        android:inputType="textMultiLine"
         android:textColor="@color/colorPrimaryText"
         android:textColorHint="@color/colorPrimaryText"
-        android:layout_below="@id/textView"
-        android:textSize="@dimen/text_body_size" >
+        android:textSize="@dimen/text_body_size">
 
     </com.google.android.material.textfield.TextInputEditText>
 
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_layout"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="@dimen/margin_layout"
+        android:background="@color/colorAccent"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:text="Add Complaint"
+        android:textColor="@color/colorTextORIcon"
+        android:textSize="@dimen/text_btn_size"
+        app:layout_constraintEnd_toEndOf="@+id/tilPassword"
+        app:layout_constraintStart_toStartOf="@+id/tilPassword"
+        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />
 
-
-
-</RelativeLayout>
+</LinearLayout>
